--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 	color-scheme: light dark;
 	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
+	background-color: hsl(0, 0%, 14%);
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -27,19 +27,18 @@ body {
 	display: flex;
 	place-items: center;
 	min-width: 320px;
-	min-height: 100vh;
 }
 
 h1 {
-	font-size: 3.2em;
+	font-size: 3.2rem;
 	line-height: 1.1;
 }
 
 button {
 	border-radius: 8px;
 	border: 1px solid transparent;
-	padding: 0.6em 1.2em;
-	font-size: 1em;
+	padding: 0.6rem 1.2rem;
+	font-size: 1rem;
 	font-weight: 500;
 	font-family: inherit;
 	background-color: #1a1a1a;
