--- a/src/Header.css
+++ b/src/Header.css
@@ -1,10 +1,11 @@
 h1 {
 	font-size: 3.2rem;
 	line-height: 1.1;
-	margin-bottom: 0;
+	margin: 0;
 }
 
 .subtitle {
 	font-size: 1.5rem;
 	color: #999;
+	margin: 0;
 }
