--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 #root {
-	max-width: 1280px;
 	margin: 0 auto;
 	padding: 2rem;
 	text-align: center;
@@ -9,10 +8,36 @@
 	color: #646cff;
 }
 
+.controls {
+	margin-bottom: 1rem;
+}
+
+.controls button {
+	margin: 0 0.75rem;
+}
+
 .error-container {
 	background-color: #ca5035;
 	color: #eee;
 	padding: 1.5rem;
 	border-radius: 0.5rem;
 	margin-bottom: 2rem;
+}
+
+.container {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-gap: 1rem;
+	width: 90vw;
+	margin: 0;
+}
+
+output {
+	border: 1px solid #666;
+	background-color: #131320;
+	padding: 1rem;
+	border-radius: 0.5rem;
+	white-space: pre-line;
+	display: block;
+	text-align: left;
 }
